--- a/Index.html
+++ b/Index.html
@@ -58,9 +58,388 @@
                 <h6>24/7 Support</h6>
             </div>
 
-
+        </section>
+        <section id="product1" class="section-p1">
+            <h2>Featured Products</h2>
+            <p>Exclusive Summer collection</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="c1.png" alt="">
+                    <div class="des">
+                        <span>DIOR</span>
+                        <h5>DIOR Addict Lip Glow - 001 Pink</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3400</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c2.png" alt="">
+                    <div class="des">
+                        <span>Rare Beauty</span>
+                        <h5>Rare Beauty Silky Touch Highlighter </h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3250</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c3.png" alt="">
+                    <div class="des">
+                        <span>Louis Vuitton</span>
+                        <h5>Louis Vuitton Douche Bag</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹10890</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c4.png" alt="">
+                    <div class="des">
+                        <span>Supergoop!</span>
+                        <h5>Unseen Sunscreen SPF 40</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹4856</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c5.png" alt="">
+                    <div class="des">
+                        <span>IKMA_beauty</span>
+                        <h5>Matte Foundation-0905Bronze</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹1216</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c6.png" alt="">
+                    <div class="des">
+                        <span>Sol de Janeiro</span>
+                        <h5>Sol de Janeiro Bum Bum Body Scrub</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3578</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c7.png" alt="">
+                    <div class="des">
+                        <span>LANIEGE</span>
+                        <h5>Lip Glowy Balm - Berry</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹690</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c8.png" alt="">
+                    <div class="des">
+                        <span>TONY MOLY</span>
+                        <h5>TONYMOLY Sheet mask pack of 5</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹500</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c9.png" alt="">
+                    <div class="des">
+                        <span>Drunk Elephant</span>
+                        <h5>Protini Polypeptide Cream 50ml/1.69oz</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹5976</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+        </section>
+        <section id="banner" class="section-m1">
+            <h4>Repair Services</h4>
+            <h2>Up to<span> 70% Off </span>on all Accessories and make-up</h2>
+            <button class="normal">Explore More</button>
+        </section>
+        <section id="product1" class="section-p1">
+            <h2>NEW ARRIVALS</h2>
+            <p>Best of luxury</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="c1.png" alt="">
+                    <div class="des">
+                        <span>DIOR</span>
+                        <h5>DIOR Addict Lip Glow - 001 Pink</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3400</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c2.png" alt="">
+                    <div class="des">
+                        <span>Rare Beauty</span>
+                        <h5>Rare Beauty Silky Touch Highlighter </h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3250</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c3.png" alt="">
+                    <div class="des">
+                        <span>Louis Vuitton</span>
+                        <h5>Louis Vuitton Douche Bag</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹10890</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c4.png" alt="">
+                    <div class="des">
+                        <span>Supergoop!</span>
+                        <h5>Unseen Sunscreen SPF 40</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹4856</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c5.png" alt="">
+                    <div class="des">
+                        <span>IKMA_beauty</span>
+                        <h5>Matte Foundation-0905Bronze</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹1216</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c6.png" alt="">
+                    <div class="des">
+                        <span>Sol de Janeiro</span>
+                        <h5>Sol de Janeiro Bum Bum Body Scrub</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹3578</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c7.png" alt="">
+                    <div class="des">
+                        <span>LANIEGE</span>
+                        <h5>Lip Glowy Balm - Berry</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹690</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c8.png" alt="">
+                    <div class="des">
+                        <span>TONY MOLY</span>
+                        <h5>TONYMOLY Sheet mask pack of 5</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹500</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="c9.png" alt="">
+                    <div class="des">
+                        <span>Drunk Elephant</span>
+                        <h5>Protini Polypeptide Cream 50ml/1.69oz</h5>
+                        <div class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                        </div>
+                        <h4>₹5976</h4>
+                    </div>
+                    <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
+                </div>
+            </div>
+        </section>
+        <section id="sm-banner" class="section-p1">
+            <div class="banner-box">
+                <h4>Crazy Deals</h4>
+                <h2>Buy1 Get1 Free</h2>
+                <span>The best of skin care is on sale at serione</span>
+                <button class="white">Learn More</button>
+            </div>
+            <div class="banner-box banner-box2">
+                <h4>Luxury Essentials</h4>
+                <h2>Black Friday Sale</h2>
+                <span>Spoil your skin with amazing skincare products</span>
+                <button class="white">Learn More</button>
+            </div>
+        </section>
+        <section id="banner3">
+        <div class="banner-box">
+            <h2>Reset your closet</h2>
+            <h3>Extra 25% Off on Accessories</h3>
+            </div>
+            <div class="banner-box banner-box2">
+                <h2>Shop Spring shoes</h2>
+                <h3>Treet your feet</h3>
+                </div>
+                <div class="banner-box banner-box3">
+                    <h2>Lip loving shades</h2>
+                    <h3>10% off on all lip range sitewide</h3>
+                    </div>
 
         </section>
+        <section id="newsletter" class="section-p1 section-m1">
+            <div class="newstext">
+                <h4>Sign Up for news letters</h4>
+                <p>Get latest updates about our exclusive collections and <span>Special Offers. </span></p>
+            </div>
+            <div class="form">
+                <input type="text" placeholder="your email address">
+                <button class="normal">Sign Up</button>
+            </div>
+
+        </section>
+        <section>
+            <footer class="srction-p1">
+                <div class="col">
+                    <img class="logo" src="logo2.png" alt="">
+                    <h4>Contact</h4>
+                    <p><strong>Aggress:</strong> 5-4658 Barter Street, Ontario, Canada</p>
+                    <p><strong>Phone:</strong>+91-(7654321909)/+61 5325 9870</p>
+                    <p><strong>Hours:</strong>8:00 - 21:00, Mon - Sat</p>
+                    <div class="follow">
+                        <h4>Follow Us</h4>
+                        <div class="icon"></div>
+                        <i class="fa fa-facebook-f"></i>
+                        <i class="fa fa-twitter"></i>
+                        <i class="fa fa-instagram"></i>
+                        <i class="fa fa-pinterest-p"></i>
+                        <i class="fa fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <h4>About</h4>
+                    <a href="#">About Us</a>
+                    <a href="#">Delivery Information</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms and Conditions</a>
+                    <a href="#">Contact Us</a>
+
+                </div>
+                <div class="col">
+                    <h4>My Account</h4>
+                    <a href="#">Sign In</a>
+                    <a href="#">View cart</a>
+                    <a href="#">My Wishlist</a>
+                    <a href="#">Track My Order</a>
+                    <a href="#">Help</a>
+                </div>
+                <div class="col install">
+                    <h4>Install App</h4>
+                    <p>From App store or Google Play</p>
+                    <div class="row">
+                        <img src="p1.png" alt="">
+                        <img src="p2.png" alt="">
+                    </div>
+                    <p>Secured Payment Gateways</p>
+                    <img src="g1.png" alt="">
+                </div>
+                <div class="copyright">
+                    <p>©2023,Fiona Dash,HTML CSS E-Commerce Template</p>
+                </div>
+            </footer>
+        </section>
+        <script src="script.js">
+
+        </script>
 
     </body>
 
